--- a/.github/workflows/dev.workflow.yml
+++ b/.github/workflows/dev.workflow.yml
@@ -14,3 +14,15 @@ jobs:
           node-version: 16.x
       - name: Install dependencies
         run: npm install
+
+  Build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16.x
+      - name: Build react app
+        run: npm run build
