--- a/.github/workflows/dev.workflow.yml
+++ b/.github/workflows/dev.workflow.yml
@@ -8,6 +8,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Use cache
+        uses: actions/cache@v2
+        with:
+          path: 'node_modules'
+          key: modules-${{github.sha}}
       - name: Use node
         uses: actions/setup-node@v1
         with:
@@ -17,9 +22,15 @@ jobs:
 
   Build:
     runs-on: ubuntu-latest
+    needs: Install
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Use cache
+        uses: actions/cache@v2
+        with:
+          path: 'node_modules'
+          key: modules-${{github.sha}}
       - name: Use node
         uses: actions/setup-node@v1
         with:
