--- a/.github/workflows/dev.workflow.yml
+++ b/.github/workflows/dev.workflow.yml
@@ -31,9 +31,26 @@ jobs:
         with:
           path: 'node_modules'
           key: modules-${{github.sha}}
+      - name: Use cache for build
+        uses: actions/cache@v2
+        with:
+          path: 'build'
+          key: build-${{github.sha}}
       - name: Use node
         uses: actions/setup-node@v1
         with:
           node-version: 16.x
       - name: Build react app
         run: npm run build
+
+  Deploy:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Use cache for build
+        uses: actions/cache@v2
+        with:
+          path: 'build'
+          key: build-${{github.sha}}
