--- a/.github/workflows/dev.workflow.yml
+++ b/.github/workflows/dev.workflow.yml
@@ -47,16 +47,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: Build
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Use cache for build
-        uses: actions/cache@v2
-        with:
-          path: 'build'
-          key: build-${{github.sha}}
-      - name: Build, Push and Release a Docker container to Heroku.
-        uses: gonuit/heroku-docker-deploy@v1.3.3
-        with:
-          email: ${{ secrets.HEROKU_EMAIL }}
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+        - name: deploy to gh-pages
+          uses: peaceiris/actions-gh-pages@v3
+          with:
+              deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+              publish_dir: ./build
