--- a/.github/workflows/dev.workflow.yml
+++ b/.github/workflows/dev.workflow.yml
@@ -47,6 +47,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: Build
     steps:
+        - name: Use cache for build
+          uses: actions/cache@v2
+          with:
+            path: 'build'
+            key: build-${{github.sha}}
         - name: deploy to gh-pages
           uses: peaceiris/actions-gh-pages@v3
           with:
